[type]: fix [module]: QTips CSS [id]: #453 [desc]: Fixes #453. QTips get increased z-index for better visibility in front of loadMasks.
git-svn-id: http://code.extjs.com/svn/ext/trunk@5926 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/qtips.css
+++ b/resources/css/structure/qtips.css
@@ -3,7 +3,7 @@
 	top: 0;
     left:0;
     visibility: hidden;
-	z-index: 20000;
+	z-index: 20002;
     border:0 none;
 }
 
